[gd_scene format=3 uid="uid://dbqexyq3gqd61"]

[ext_resource type="Script" uid="uid://d3tppicrv0dx2" path="res://Assets/Scripts/lich.gd" id="1_gx2ft"]
[ext_resource type="PackedScene" uid="uid://ck4mui74vmhd5" path="res://Assets/Enemies/enemy_hurtbox.tscn" id="2_2duxn"]
[ext_resource type="PackedScene" uid="uid://bueentxweefpn" path="res://Assets/Enemies/EnemyHitbox.tscn" id="3_yjjpx"]
[ext_resource type="Texture2D" uid="uid://cey3r0mrbj2wo" path="res://Sprites/Placeholders/lich.png" id="4_hcnsy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u6se1"]

[node name="Lich" type="CharacterBody2D" unique_id=1704017116]
scale = Vector2(5, 5)
script = ExtResource("1_gx2ft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1869033601]
shape = SubResource("CircleShape2D_u6se1")

[node name="EnemyHurtbox" parent="." unique_id=2145302875 instance=ExtResource("2_2duxn")]

[node name="EnemyHitbox" parent="." unique_id=1155655665 instance=ExtResource("3_yjjpx")]

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=59136266]
position = Vector2(-5.9604645e-08, 1.1920929e-07)
scale = Vector2(0.019243421, 0.019597786)
texture = ExtResource("4_hcnsy")

[node name="Skeleton Spawn Timer" type="Timer" parent="." unique_id=1047298455]
one_shot = true

[connection signal="take_damage" from="EnemyHitbox" to="." method="_on_enemy_hitbox_take_damage"]
[connection signal="timeout" from="Skeleton Spawn Timer" to="." method="_on_skeleton_spawn_timer_timeout"]
